--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- Navbar -->
     <nav id="navbar">
       <h1 class="logo">
-        <span class="text-primary"> <i class="fas fa-book-open"></i>Edge </span
+        <span class="text-primary"> <i class="fas fa-book-open"></i> Edge</span
         >Ledger
       </h1>
       <ul>
@@ -88,5 +88,91 @@
         </div>
       </div>
     </section>
+
+    <!-- Section: Who We Are -->
+    <section id="who">
+      <div class="who-img"></div>
+      <div class="who-text bg-dark p-2">
+        <h2 class="m-heading"><span class="text-primary">Who</span> We Are</h2>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi
+          neque commodi delectus tempora possimus soluta incidunt libero earum
+          placeat voluptatibus totam porro ullam veniam deserunt necessitatibus
+          ea sed, vero facilis?
+        </p>
+        <h3>Our Team</h3>
+        <ul class="list">
+          <li>Mark Smith: CEO</li>
+          <li>Shannon Johnson: CFO</li>
+          <li>John Corbit: Lead Accountant</li>
+          <li>Janet Williams: Investment Manager</li>
+          <li>Kara Jackson: Senior Accountant</li>
+        </ul>
+      </div>
+    </section>
+    <!-- Section: Clients -->
+    <section id="clients" class="py-1">
+      <div class="container">
+        <h2 class="m-heading"><span class="text-primary">Our</span> Clients</h2>
+        <div class="items py-1">
+          <div><img src="./img/logos/logo1.png" alt="Client" /></div>
+          <div><img src="./img/logos/logo2.png" alt="Client" /></div>
+          <div><img src="./img/logos/logo3.png" alt="Client" /></div>
+          <div><img src="./img/logos/logo4.png" alt="Client" /></div>
+          <div><img src="./img/logos/logo5.png" alt="Client" /></div>
+        </div>
+      </div>
+    </section>
+    <!-- Section: Contact -->
+    <section id="contact">
+      <div class="contact-form bg-primary p-2">
+        <h2 class="m-heading">Contact Us</h2>
+        <p>Please use form below to contact us.</p>
+        <form>
+          <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text" name="name" id="name" placeholder="Enter Name" />
+          </div>
+          <div class="form-group">
+            <label for="email">Name</label>
+            <input
+              type="email"
+              name="email"
+              id="email"
+              placeholder="Enter Email"
+            />
+          </div>
+          <div class="form-group">
+            <label for="phone">Phone Number</label>
+            <input type="text" name="phone" id="phone" placeholder="Enter Phone Number" />
+          </div>
+          <div class="form-group">
+            <label for="message">Message</label>
+            <textarea name="message" id="message" placeholder="Enter Message" /></textarea>
+          </div>
+          <input type="submit" value="Send" class="btn btn-dark">
+        </form>
+      </div>
+      <div class="map"></div>
+    </section>
+    <!-- Footer -->
+    <footer id="main-footer" class="bg-dark text-center py-1">
+        <div class="container">
+        <p>Copyright &copy: 2019 EdgeLedger, All Rights Reserved</p>
+    </div>
+    </footer>
+   
+ <!-- JQuery CDN -->
+    <script
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
+    
+<!-- Local JS File -->
+    <script src="js/main.js"></script>
+
+<!-- Google Maps -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB2thQFQ6j6RQvuR1Q_kLEsOjD-70T03jQ&callback=initMap"
+    async defer></script>
   </body>
 </html>
